# rby1-sdk

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTICE  README.md  build.py  conanfile.py  dev-history-cleanup-script.sh  dev-history-cleanup-summary.md  dev-history-rebase-todo.txt  docker-compose.sim.arm.yaml  docker-compose.sim.yaml  pyproject.toml  python-tutorial.ipynb  setup.py
examples/: CMakeLists.txt  demo_motion.cpp  get_robot_state.cpp  master_arm.cpp  master_arm_.cpp  movej.py  read_once.py  real_time_control_command.cpp  reset_odometry.cpp  rtcomm_protocol.cpp  self_collision_checking.cpp  teleoperation_with_joint_mapping.cpp  udp_test.cpp  velocity_estimation.cpp
examples/cpp/: 00_helper.cpp  01_hello_rby1.cpp  02_robot_model_setting.cpp  03_robot_state.cpp  04_parameter.cpp  05_robot_state_stream.cpp  06_state_tool_flange.cpp  07_power.cpp  08_check_firmware_version.cpp  09_get_pid_gain.cpp  10_set_pid_gain.cpp  11_factory_default_pid_gain.cpp  12_led.cpp  13_set_system_time.cpp  14_wifi.cpp  15_log.cpp  16_log_stream.cpp  17_fault_log.cpp  18_dynamics_modeling.cpp  19_dynamics_robot.cpp  20_leader_arm.cpp  20_leader_arm_state_check.cpp  21_record.cpp  22_replay.cpp  23_zero_pose.cpp  24_demo_motion.cpp  25_wiggle_motion.cpp  26_cancel_control.cpp  27_cartesian_impedance_control.cpp  27_collisions.cpp  28_cartesian_impedance_control.cpp  29_joint_impedance_control.cpp  30_joint_group_command.cpp  30_multi_controls.cpp  31_command_stream.cpp  31_multi_controls.cpp  32_command_stream.cpp  33_cartesian_command_stream.cpp  34_leader_arm_teleop_with_monitor.cpp  34_real_time_control.cpp  (+43 more)
examples/cpp/data-collector/: CMakeLists.txt  README.md  main.cpp  utils.h
examples/cpp/data-collector/gui/: main.py  pyproject.toml  ui_form.py  ui_form.ui
examples/cpp/dynamics/: dynamics_coeff.cpp  inverse_dynamics.cpp  mass_matrix.cpp  sample_robot.h  simple_robot.cpp
examples/cpp/joystick/: joystick_receiver.cpp  joystick_receiver.h
examples/cpp/module_test/: CMakeLists.txt  ft_sensor.cpp  gripper.cpp  head.cpp  joystick_test.cpp  left_arm.cpp  master_arm.cpp  right_arm.cpp  tool_flange.cpp  torso.cpp
examples/dynamics/: CMakeLists.txt  gravity_term.cpp  load_urdf.cpp  reflective_mass.cpp  sample_model.urdf
examples/module_test/: CMakeLists.txt  gripper.cpp  master_arm.cpp  right_arm.cpp  tool_flange.cpp
examples/python/: 00_helper.py  01_hello_rby1.py  02_power.py  02_robot_model_setting.py  03_robot_state.py  04_robot_state_stream.py  05_collisions.py  05_parameter.py  06_state_tool_flange.py  06_stop_command.py  07_impedance_control.py  07_power.py  08_check_firmware_version.py  08_zero_pose.py  09_demo_motion.py  09_get_pid_gain.py  10_get_pid_gain.py  10_set_pid_gain.py  11_factory_default_pid_gain.py  11_set_pid_gain.py  12_fatory_default_pid_gain.py  12_led.py  13_robot_model.py  13_set_system_time.py  14_led.py  14_wifi.py  15_log.py  15_set_system_time.py  16_battery_config.py  16_log_stream.py  17_fault_log.py  17_teleoperation_with_joint_mapping.py  18_check_firmware_version.py  18_dynamics_modeling.py  19_dynamics_robot.py  19_master_arm.py  20_leader_arm_state_check.py  20_teleoperation.py  20_wifi.py  21_record.py  (+66 more)
examples/python/hand/: hand-test-readme.md  hubo_hand.py  hubo_hand_read_test.py  hubo_hand_test1.py  hubo_hand_test2.py
examples/python/hand/libpcanbasic/: changelog.md
examples/python/hand/libpcanbasic/doc/: PCANBasic_deu.chm  PCANBasic_enu.chm  PCANBasic_enu_linux_addenda.txt
examples/python/hand/libpcanbasic/examples/console/NativeC++/01_LookUpChannel/: 01_LookUpChannel.cpp  01_LookUpChannel.h  RunExample.cpp
examples/python/hand/libpcanbasic/examples/console/NativeC++/02_GetSetParameter/: 02_GetSetParameter.cpp  02_GetSetParameter.h  RunExample.cpp
examples/python/hand/libpcanbasic/examples/console/NativeC++/03_ManualRead/: 03_ManualRead.cpp  03_ManualRead.h  RunExample.cpp
examples/python/hand/libpcanbasic/examples/console/NativeC++/04_ManualWrite/: 04_ManualWrite.cpp  04_ManualWrite.h  RunExample.cpp
examples/python/hand/libpcanbasic/examples/gui/python/: Makefile  PCANBasic.py  PCANBasicExample.pyw  PCANBasicExample_py3.pyw  readme.md
examples/python/hand/libpcanbasic/pcanbasic/: Makefile  Makefile_latest.mk  Makefile_legacy.mk  changelog.md
examples/python/hand/libpcanbasic/pcanbasic/include/: PCANBasic.cs  PCANBasic.h  PCANBasic.vb  PCANBasicCLR.h
examples/python/hand/libpcanbasic/pcanbasic/lib/: libpcanbasic.so.4.10.0
examples/python/hand/libpcanbasic/pcanbasic/src/: libpcanbasic.c  libpcanbasic_legacy.cpp  pcaninfo.c  pcaninfo.h  pcanlog.c  pcanlog.h  pcbcore.c  pcbcore.h  pcbcore_data.h  pcblog.c  pcblog.h  pcbtrace.c  pcbtrace.h  resource.h  version.h
examples/python/hand/libpcanbasic/pcanbasic/src/pcan/: .config
examples/python/hand/libpcanbasic/pcaninfo/: Makefile  changelog.md  pcaninfo.1.3.2
examples/python/hand/libpcanbasic/pcaninfo/src/: main.c  version.h
examples/python/module_test/: gripper_test.py
examples/python/quick_ui/: qc_gui.py  quick_ui.py  quick_ui_cal.py
examples/python/sample_ui/: common.py  joint_position_table_model.py  joint_states_table_model.py  sample_action.py  sample_action_form.py  sample_action_form.ui  sample_form.py  sample_form.ui  sample_gui.py
python/: CMakeLists.txt  common.cpp  common.h  control_manager_state.cpp  dynamics.cpp  dynamixel_bus.cpp  log.cpp  math.cpp  model.cpp  model.h  net.cpp  print_helper.cpp  print_helper.h  rby1_sdk.cpp  robot.cpp  robot_command_builder.cpp  robot_command_feedback.cpp  robot_info.cpp  robot_state.cpp  serial.cpp  upc.cpp
python/rby1_sdk/: __init__.py  _robot_command.py  dynamics.py  math.py  upc.py
src/: CMakeLists.txt  robot.cpp  robot_command_builder.cpp  robot_command_feedback.cpp
src/base/: dynamixel_bus.cpp
src/dynamics/: inertial.cpp  joint.cpp  link.cpp  robot.cpp
src/math/: qp_solver.cpp  se2.cpp  se3.cpp  so3.cpp  trapezoidal_motion_generator.cpp
src/net/: real_time_control_protocol.cpp
src/upc/: device.cpp  leader_arm.cpp  master_arm.cpp
(+496 files in other folders)
